# pydantic-visualizer

./: .gitignore  LICENSE  MANIFEST.in  PACKAGE_SETUP_COMPLETE.md  README.md  SETUP_GUIDE.md  pyproject.toml
examples/: 01_basic_usage.py  02_nested_models.py  03_enum_handling.py  04_custom_colors.py  05_complex_relationships.py  05_save_markdown.py  06_save_html.py  07_complex_relationships.py  07_save_markdown.py  08_add_multiple_models.py  08_show_in_browser.py  README.md
examples/output/: task_mermaid.html  task_mermaid.md
pydantic_visualizer/: __init__.py  pydantic_visualizer.py  type_checkers.py
tests/: __init__.py  test_pydantic_visualizer.py  test_type_checkers.py
